chore: install gh-pages
modify outdir with build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "@core/*": ["./src/core/*"],
       "@podcast/*": ["./src/features/podcast/*"]
     },
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": true
 //    "types": ["vitest/globals", "ts-mockito"]
   },
 
