--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,12 +19,13 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "paths": {
+      "@hooks/*": ["./src/shared/hooks/*"],
       "@shared/*": ["./src/shared/*"],
       "@core/*": ["./src/core/*"],
       "@podcast/*": ["./src/features/podcast/*"]
     },
     "noFallthroughCasesInSwitch": true
-//    "types": ["vitest/globals", "ts-mockito"]
+    //    "types": ["vitest/globals", "ts-mockito"]
   },
 
   "include": ["src"],
