test: add test to hooks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,10 @@
     "noUnusedParameters": true,
     "paths": {
       "@hooks/*": ["./src/shared/hooks/*"],
+      "@components/*": ["./src/shared/components/*"],
       "@shared/*": ["./src/shared/*"],
       "@core/*": ["./src/core/*"],
-      "@podcast/*": ["./src/features/podcast/*"]
+      "@podcast/*": ["./src/modules/podcast/*"]
     },
     "noFallthroughCasesInSwitch": true
     //    "types": ["vitest/globals", "ts-mockito"]
