feat: create component grid more generic
create mode development with npm guion npm run build:dev

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:dev": "npm run build -- --mode development",
     "test": "vitest",
     "cy:open": "cypress open",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint ./src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write ./src",
     "preview": "vite preview"
   },
   "dependencies": {
